manifest/kubernetes.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-server-deployment
  labels:
    app: chatbotServer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatbotServer
  template:
    metadata:
      labels:
        app: chatbotServer
    spec:
      containers:
      - name: chatbot-server
        image: tinegaonchari/chatbot-server:latest
        ports:
        - containerPort: 8000
        
        
---

apiVersion: v1
kind: Service
metadata:
  name: chatbot-server-service
spec:
  selector:
    app: chatbot-server 
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-client-deployment
  labels:
    app: chatbot-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatbot-client
  template:
    metadata:
      labels:
        app: chatbot-client
    spec:
      containers:
      - name: chatbot-client
        image: tinegaonchari/chatbot-client:latest
        ports:
        - containerPort: 3000


---

apiVersion: v1
kind: Service
metadata:
  name: chatbot-client-service
spec:
  selector:
    app: chatbot-client
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
   
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-client2-deployment
  labels:
    app: chatbot-client2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatbot-client2
  template:
    metadata:
      labels:
        app: chatbot-client2
    spec:
      containers:
      - name: chatbot-client2
        image: tinegaonchari/chatbot-client2:latest
        ports:
        - containerPort: 3001


---

apiVersion: v1
kind: Service
metadata:
  name: chatbot-client2-service
spec:
  selector:
    app: chatbot-client2
  ports:
  - protocol: TCP
    port: 3001
    targetPort: 3001
