manifest/istio-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: chatbot-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: https
      protocol: HTTP
    hosts:
    - "*"
