manifest/chatbot-server-istio.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chatbot-virtual-server
spec:
  hosts:
  - "*"
  gateways:
  - chatbot-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: chatbot-server-service
        port:
          number: 8000
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: chabot-destination-rule-server
spec:
  host: chatbot-server-service
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    outlierDetection: # Circuit Breakers HAVE TO BE SWITCHED ON
      maxEjectionPercent: 100
      consecutive5xxErrors: 2
      interval: 10s
      baseEjectionTime: 30s      
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: chatbot-service-entry
spec:
  hosts:
  - "*"
  location: MESH_EXTERNAL
  ports:
  - number: 80
    name: http-api
    protocol: HTTP
  resolution: NONE
