manifest/circuit-breaker.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
...
spec:
  host: chabot-server-service
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
      tcp:
        maxConnections: 1
    outlierDetection:
      baseEjectionTime: 3m
      consecutive5xxErrors: 1
      interval: 1s
      maxEjectionPercent: 100
